initial push test case Mockito